# 4234324235r3ttg

./: CMakeLists.txt  foo_sample.rc  main.cpp  resource.h  yandex_album_art.cpp  yandex_api.hpp  yandex_filesystem.cpp  yandex_input.cpp  yandex_ui.cpp
.github/workflows/: build.yml
qobuz_ext/: q.txt
